# expertos

./: .gitignore  .justfile  Dockerfile  LICENSE  config.sample.toml  docker-compose.yml  pyproject.toml  run.sh
crontab/: dockerus
expertos/: db.py  expert.py  linux_expert.py  main.py  openai.py  python_expert.py  telegram.py
expertos/data/: linux_commands.txt
src/: db.py  expert.py  linux_expert.py  log.py  main.py  openai.py  python_expert.py  telegram.py
src/data/: python_commands.txt  python_modules.txt
tests/: test_db.py  test_openai.py  test_telegram.py
