[tool.poetry]
name = "expertos"
version = "0.1.0"
description = ""
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"
jinja2 = "^3.1.3"
sanic = "^23.12.1"
sanic-ext = "^23.12.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.26.0"
pytest = "^7"
pytest-asyncio = "^0.23.4"
aiofiles = "^23.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "project"
log_cli = true
log_level = "DEBUG"

[tool.pyright]
venvPath = "."
venv = ".venv"
