[project]
name = "expertos"
version = "0.1.0"
description = ""
authors = [{name = "Lorenzo Carbonell", email = "lorenzo.carbonell.cerezo@gmail.com"}]

dependencies = [
    "httpx >= 0.26.0",
    "jinja2 >= 3.1.3",
    "sanic >= 23.12.1",
    "sanic-ext >= 23.12.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/expertos"]
