[project]
name = "expertos"
version = "0.1.0"
description = ""
authors = [{name = "Lorenzo Carbonell", email = "lorenzo.carbonell.cerezo@gmail.com"}]

dependencies = [
    "httpx >= 0.26.0",
    "jinja2 >= 3.1.3",
    "sanic>=23.12.1",
    "sanic-ext >= 23.12.0",
]
readme = "README.md"
requires-python = ">= 3.12"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["expertos"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "D401"  # imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "google"

